# screwdriver

./: .gitignore  .travis.yml  README  cabal.sh  screwdriver.cabal  screwdriver.scm  stack.yaml
src/: Main.hs
src/Language/FIRRTL/: Annotations.hs  Low.hs  Parser.hs  Pretty.hs  Recursion.hs  Syntax.hs  TypeChecker.hs  Types.hs  Unification.hs
src/Language/FIRRTL/Parser/: Common.hs  Declaration.hs  Expression.hs  Statement.hs
src/Language/FIRRTL/Syntax/: Common.hs  Expr.hs  Recursion.hs
src/Language/Verilog/: Parser.hs  Syntax.hs
src/Language/Verilog/Parser/: Expression.hs  Identifiers.hs  Module.hs  Number.hs
src/Language/Verilog/Syntax/: Attribute.hs  Module.hs  Number.hs
src/Language/Verilog/Syntax/Number/: Value.hs
test/: Test.hs
test/Test/: Num.hs
test/Test/Language/FIRRTL/: Low.hs
test/Test/Language/FIRRTL/Syntax/: Expr.hs
test/Test/Language/Verilog/Syntax/: Number.hs
test/Test/Language/Verilog/Syntax/Number/: Value.hs
