name:                screwdriver
version:             0.0.1.0
synopsis:            Utility toolset for HDL manipulation
description:         Please see README.md
homepage:            http://github.com/jkopanski/screwdriver#readme
license:             GPL-3
license-file:        LICENSE
author:              Jakub Kopański
maintainer:          jakub@quivade.com
copyright:           Copyright (c) 2017 Quivade
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    -- Language.FIRRTL.Parser
    -- Language.FIRRTL.Parser.Common
    -- Language.FIRRTL.Parser.Declaration
    -- Language.FIRRTL.Parser.Expression
    -- Language.FIRRTL.Parser.Statement
    Language.FIRRTL.Annotations
    Language.FIRRTL.Pretty
    Language.FIRRTL.Syntax
    Language.FIRRTL.Syntax.Common
    Language.FIRRTL.Syntax.Expr
    Language.FIRRTL.Recursion
    Language.FIRRTL.Types
    Language.FIRRTL.TypeChecker
    Language.FIRRTL.Unification
    -- Language.Verilog.Parser
    -- Language.Verilog.Parser.Expression
    -- Language.Verilog.Parser.Identifiers
    -- Language.Verilog.Parser.Module
    -- Language.Verilog.Parser.Number
    -- Language.Verilog.Syntax
    -- Language.Verilog.Syntax.Module
    -- Language.Verilog.Syntax.Number
    -- Language.Verilog.Syntax.Number.Value

  default-language:    Haskell2010
  default-extensions:
      DeriveFunctor
    , DeriveTraversable
    , FlexibleContexts
    , GADTs
    , KindSignatures
    , MultiParamTypeClasses
    , OverloadedStrings
    , RankNTypes
    , StandaloneDeriving
  build-depends:
      base                 >= 4.7  && < 5
    , mtl                  >= 2.2  && < 2.3
    , parsers              >= 0.12 && < 0.13
    , prettyprinter        >= 1.1  && < 1.2
    , text                 >= 1.2  && < 1.3
    , transformers         >= 0.4  && < 0.5
    , trifecta             >= 1.6  && < 1.7
    , unification-fd       >= 0.10 && < 0.11
    , unordered-containers >= 0.2  && < 0.3

-- executable screwdriver
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:
--       base >= 4.7 && < 5

test-suite screw-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:
    -- Test.Language.Verilog.Syntax.Number.Value

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:
      base                 >= 4.7  && < 5
    , screwdriver
    , unification-fd       >= 0.10 && < 0.11
    , QuickCheck           >= 2.8  && < 2.9
    , smallcheck           >= 1.1  && < 1.2
    , tasty                >= 0.11 && < 0.12
    , tasty-hunit          >= 0.9  && < 0.10
    , tasty-quickcheck     >= 0.8  && < 0.9
    , tasty-smallcheck     >= 0.8  && < 0.9
    , test-invariant       >= 0.4  && < 0.5
    , transformers         >= 0.4  && < 0.5
  ghc-options:         -threaded
